--- a/style.css
+++ b/style.css
@@ -75,3 +75,30 @@ a{
     align-items: center;
     justify-content: center;
 }
+
+.random-info h1{
+    text-align: center;
+    font-size: 36px;
+    color:#1f2937;
+    font-weight: 900;
+}
+
+.posts{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+.card{
+    max-width: 160px;
+}
+
+.foto{
+    width: 100%;
+    height: 160px;
+    border: 4px solid #3882f6;
+    /*display: flex;
+    align-items: center;
+    justify-content: center;*/
+    border-radius: 16px;
+}
